packages/design-system/src/theme/spacing.css
@theme {
    --spacing: 1px;
    --spacing-none: 0px;
    --spacing-1: 1px;
    --spacing-2: 2px;
    --spacing-4: 4px;
    --spacing-6: 6px;
    --spacing-8: 8px;
    --spacing-12: 12px;
    --spacing-16: 16px;
    --spacing-20: 20px;
    --spacing-24: 24px;
    --spacing-28: 28px;
    --spacing-32: 32px;
    --spacing-36: 36px;
    --spacing-40: 40px;
    --spacing-44: 44px;
    --spacing-48: 48px;
    --spacing-56: 56px;
    --spacing-64: 64px;
    --spacing-80: 80px;
    --spacing-96: 96px;
    --spacing-112: 112px;
    --spacing-128: 128px;
    --spacing-144: 144px;
}

